modified why us box

--- a/CSS/2-base/_content.scss
+++ b/CSS/2-base/_content.scss
@@ -178,8 +178,9 @@
         height: fit-content;
         text-align: center;
         font-size: 3em;
-        width: 400px;
+        width: 320px;
         height: 200px;
+        margin-bottom: 1.2em;
       }
 
       .why--us--box--p {
