--- a/CSS/2-base/_content.scss
+++ b/CSS/2-base/_content.scss
@@ -12,6 +12,8 @@
   .section--title {
     position: relative;
     padding-bottom: 1.5rem;
+    margin-right: auto;
+    margin-left: auto;
 
     box-shadow: 0px 12px 0px -5px currentColor;
     z-index: 1;
@@ -101,7 +103,7 @@
 
   .agents {
     display: flex;
-    gap: 1em;
+    gap: 2em;
     // flex-wrap: wrap;
     justify-content: space-evenly;
     text-align: center;
@@ -132,8 +134,8 @@
     .bio {
       @include shadow--container();
       border-radius: 20px;
-      width: 380px;
-      height: 300px;
+      width: 300px;
+      height: 400px;
       font-style: italic;
       color: $colorText-2;
 
@@ -143,10 +145,12 @@
 
       box-sizing: border-box;
       z-index: -1;
-      // position: sticky;
+
       position: relative;
-      // top: 0;
       bottom: 0;
+      left: 0;
+      right: 0;
+      margin: 1em auto;
     }
   }
 }
