--- a/CSS/2-base/_content.scss
+++ b/CSS/2-base/_content.scss
@@ -18,7 +18,6 @@
     box-shadow: 0px 12px 0px -5px currentColor;
     z-index: 1;
 
-
     &::before,
     &::after {
       content: "";
@@ -66,7 +65,7 @@
       border-radius: 20px;
       padding: 1em;
       padding-bottom: 3em;
-      width: 88%;
+      width: 60%;
       margin: 2em auto;
 
       p {
@@ -91,13 +90,12 @@
         right: 0;
         left: 0;
         margin: 0 auto;
-
       }
     }
   }
 }
 
-// AGENTS 
+// AGENTS
 #about--section {
   box-sizing: border-box;
 
@@ -110,6 +108,7 @@
     font-size: 1.5rem;
     position: relative;
     z-index: 1;
+    margin: 1em auto;
 
     img {
       margin: 1.5em 0 0;
@@ -176,7 +175,6 @@
       padding: 0;
       margin: auto;
 
-
       .why--us--box--h3 {
         top: 0;
         height: fit-content;
@@ -188,7 +186,11 @@
       }
 
       .why--us--box--p {
-        @include shadow--container($width: 400px, $height:150px, $border-radius: 10px);
+        @include shadow--container(
+          $width: 400px,
+          $height: 150px,
+          $border-radius: 10px
+        );
         @include card--shadow--small;
         position: relative;
         font-size: 1.5rem;
@@ -209,9 +211,7 @@
 #contact--form--section {
   color: $colorText-1;
   font-size: 2rem;
-
 }
-
 
 form {
   @include card--shadow--large;
@@ -248,7 +248,7 @@ form {
     }
   }
 
-  // FORM DATA 
+  // FORM DATA
   .form--data {
     display: flex;
     flex-wrap: wrap;
@@ -272,6 +272,12 @@ form {
     }
   }
 
+  // CAPTCHA
+
+  .g-recaptcha {
+    margin: 0.5em auto -1.5em;
+  }
+
   // SUBMIT
   #submit {
     padding: 5% 30%;
@@ -292,7 +298,7 @@ form {
     &:active,
     &:focus {
       box-shadow: inset 0px 0px 6px -1px black;
-      background: linear-gradient(rgba(0, 0, 0, .1)), #5a473c;
+      background: linear-gradient(rgba(0, 0, 0, 0.1)), #5a473c;
       cursor: pointer;
     }
 
@@ -315,9 +321,7 @@ form {
   }
 }
 
-
-
-// BLOG 
+// BLOG
 #blogs--section {
   .blog--flex {
     @include blog--anchor;
@@ -345,7 +349,6 @@ form {
         grid-column: 1 / 2;
         grid-row: 1 / 3;
         transition: box-shadow 200ms ease-in-out;
-
       }
 
       .blog--title {
@@ -378,19 +381,19 @@ form {
           box-shadow 150ms ease-in-out;
 
         &::after {
-          content: 'Click now to read more...';
+          content: "Click now to read more...";
           height: 45px;
           width: 126px;
           position: absolute;
-          background: $cCamel-4 linear-gradient(rgba(0, 0, 0, .1));
+          background: $cCamel-4 linear-gradient(rgba(0, 0, 0, 0.1));
           font-size: 1.2rem;
           // font-family: forum;
           font-weight: normal;
-          line-height: .9em;
+          line-height: 0.9em;
           bottom: -60px;
           right: 20px;
           z-index: -1;
-          padding: .5em .5em .3em .5em;
+          padding: 0.5em 0.5em 0.3em 0.5em;
           box-shadow: -5px 10px 20px -5px rgba(0, 0, 0, 1);
           border-top-right-radius: 0px;
           border-top-left-radius: 0px;
