--- a/CSS/main/main.css
+++ b/CSS/main/main.css
@@ -803,7 +803,7 @@ section {
   border-radius: 20px;
   padding: 1em;
   padding-bottom: 3em;
-  width: 88%;
+  width: 60%;
   margin: 2em auto;
 }
 
@@ -934,6 +934,7 @@ section {
   font-size: 1.5rem;
   position: relative;
   z-index: 1;
+  margin: 1em auto;
 }
 
 #about--section .agents img {
@@ -1228,6 +1229,10 @@ form .form--data .form--col .form--time--option {
   font-size: large;
 }
 
+form .g-recaptcha {
+  margin: 0.5em auto -1.5em;
+}
+
 form #submit {
   padding: 5% 30%;
   font-size: 1em;
@@ -1412,7 +1417,7 @@ form .form--footer p {
 }
 
 #blogs--section .blog--flex .blog--box .blog--p::after {
-  content: 'Click now to read more...';
+  content: "Click now to read more...";
   height: 45px;
   width: 126px;
   position: absolute;
@@ -1420,11 +1425,11 @@ form .form--footer p {
   background: #c3a082 linear-gradient(rgba(0, 0, 0, 0.1));
   font-size: 1.2rem;
   font-weight: normal;
-  line-height: .9em;
+  line-height: 0.9em;
   bottom: -60px;
   right: 20px;
   z-index: -1;
-  padding: .5em .5em .3em .5em;
+  padding: 0.5em 0.5em 0.3em 0.5em;
   -webkit-box-shadow: -5px 10px 20px -5px black;
           box-shadow: -5px 10px 20px -5px black;
   border-top-right-radius: 0px;
@@ -1456,7 +1461,7 @@ footer {
 
 footer h2 {
   font-size: 5rem;
-  margin: -1em auto 0em;
+  margin: -1em auto 0.5em;
   font-weight: 1000;
   color: #2a283f;
   letter-spacing: -2px;
@@ -1464,9 +1469,21 @@ footer h2 {
 
 footer h3 {
   font-size: 2.8rem;
-  margin-bottom: -.8em;
+  margin-bottom: -0.8em;
   padding-bottom: 0em;
   font-weight: 1000;
+  margin-top: 0;
+  position: relative;
+}
+
+footer h3::after {
+  content: "";
+  background: currentColor;
+  height: 5px;
+  position: absolute;
+  bottom: -10px;
+  left: -10px;
+  right: -10px;
 }
 
 footer a {
@@ -1557,7 +1574,7 @@ footer a:hover::after, footer a:active::after, footer a:focus::after {
 }
 
 footer .footer__grid {
-  color: #2a283f;
+  color: #f1ead4;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1568,8 +1585,6 @@ footer .footer__grid {
 }
 
 footer .footer__grid #footer__addresses {
-  margin: 0em auto 2em auto;
-  margin-top: 1em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1580,8 +1595,20 @@ footer .footer__grid #footer__addresses {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   font-size: 1rem;
-  padding-left: 5em;
-  color: #2a283f;
+  color: #f1ead4;
+}
+
+footer .footer__grid #footer__addresses .footer--card {
+  -webkit-box-shadow: inset 0px 6px 10px 0px black;
+          box-shadow: inset 0px 6px 10px 0px black;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background: #2a283f -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.1)));
+  background: #2a283f linear-gradient(rgba(0, 0, 0, 0.1));
+  padding: 1.8em;
+  border-radius: 20px;
+  width: 450px;
+  margin: 2em auto;
 }
 
 footer .footer__grid .footer--gkg--sm {
@@ -1594,7 +1621,7 @@ footer .footer__grid .footer--gkg--sm {
       -ms-flex-direction: column;
           flex-direction: column;
   margin: 0;
-  margin-top: .5em;
+  margin-top: 0.5em;
   padding: 0;
   position: relative;
   color: #2a283f;
@@ -1658,34 +1685,35 @@ footer .footer__grid address {
 
 footer .footer__grid address span {
   font-size: 1.2em;
-  margin-bottom: -.6em;
-  margin-top: .6em;
+  padding-bottom: 0em;
+  margin-bottom: 0.1em;
+  margin-top: 0.6em;
   font-weight: bolder;
 }
 
 footer .footer__grid address a {
-  padding: 0;
+  padding-left: 0.2em;
   margin: 0;
 }
 
 footer .footer__grid address a:-webkit-any-link {
   position: relative;
   text-decoration: none;
-  color: #864f39ff;
+  color: #c3a082;
   z-index: 1;
 }
 
 footer .footer__grid address a:-moz-any-link {
   position: relative;
   text-decoration: none;
-  color: #864f39ff;
+  color: #c3a082;
   z-index: 1;
 }
 
 footer .footer__grid address a:any-link {
   position: relative;
   text-decoration: none;
-  color: #864f39ff;
+  color: #c3a082;
   z-index: 1;
 }
 
@@ -1743,7 +1771,7 @@ footer .footer__grid address a:any-link::after {
 
 footer .footer__grid address a:hover, footer .footer__grid address a:active, footer .footer__grid address a:focus {
   outline: none;
-  color: #a67a62ff;
+  color: #eee6c6;
 }
 
 footer .footer__grid address a:hover::after, footer .footer__grid address a:active::after, footer .footer__grid address a:focus::after {
@@ -1762,14 +1790,15 @@ footer .footer__grid address ul {
           flex-direction: column;
   margin: 0;
   padding: 0;
-  color: #2a283f;
+  color: #f1ead4;
 }
 
 footer .footer__grid address ul li {
-  margin-bottom: .5em;
+  margin-bottom: 0.5em;
 }
 
 footer .footer__grid address ul li svg {
+  padding-left: 0.5em;
   font-size: 1.2em;
 }
 
