--- a/CSS/2-base/_images.scss
+++ b/CSS/2-base/_images.scss
@@ -6,3 +6,11 @@ img {
 .bs {
   box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 1);
 }
+
+.GKG--logo {
+  position: absolute;
+
+  top: 5em;
+  width: 16em;
+  right: 58em;
+}
