--- a/CSS/2-base/_footer.scss
+++ b/CSS/2-base/_footer.scss
@@ -12,6 +12,7 @@ footer {
     font-weight: 1000;
     color: $colorText-2;
     letter-spacing: -2px;
+    line-height: 0.8em;
   }
 
   h3 {
@@ -52,12 +53,12 @@ footer {
   //   right: 0.5em;
   // }
 
-  .footer__grid {
+  .footer__flex {
     color: $colorText-1;
     display: flex;
     flex-direction: column;
 
-    #footer__addresses {
+    .footer__addresses {
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
@@ -70,7 +71,7 @@ footer {
         background: $colorBg-1 linear-gradient(rgba(0, 0, 0, 0.1));
         padding: 1.8em;
         border-radius: 20px;
-        width: 450px;
+        width: 460px;
         margin: 2em auto;
       }
     }
