--- a/CSS/2-base/_header-fs.scss
+++ b/CSS/2-base/_header-fs.scss
@@ -5,7 +5,6 @@
   grid-template-columns: repeat(2, auto);
   grid-template-rows: 2rem repeat(3, min-content) 3rem;
   grid-template-areas:
-
     " ......     ...... "
     " title      img    "
     " slogan     img    "
@@ -26,7 +25,6 @@
 
   #header--text {
     grid-area: text;
-
   }
 }
 
@@ -49,12 +47,11 @@ header {
     margin: 0;
     padding: 1rem;
     margin-left: auto;
-    line-height: .9em;
-
+    line-height: 0.9em;
   }
 
   .slogan {
-    margin-top: -.4em;
+    margin-top: -0.4em;
     padding-left: 3em;
     margin-left: auto;
     font-style: italic;
@@ -66,13 +63,12 @@ header {
   #header--img {
     margin: auto 1rem -0.02rem 1rem;
     margin-right: auto;
-
   }
 
   #header--text {
     display: block;
     max-width: 480px;
-    padding: 2em 3em 2.4em;
+    padding: 2em 3em 2.8em;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 2em;
@@ -83,7 +79,7 @@ header {
   // ICONS
 
   .header--icons {
-    @include svg--a(.5rem 2rem, 3rem, $hlColor-1_1, $hlColor-1_2);
+    @include svg--a(0.5rem 2rem, 3rem, $hlColor-1_1, $hlColor-1_2);
     @include drop--shadow;
     display: flex;
     flex-direction: column;
@@ -92,11 +88,10 @@ header {
     top: 20px;
     right: 0;
     text-align: center;
-
   }
 
   .header--down--arrow {
-    @include svg--a(.5rem 2rem, 4rem, $hlColor-1_1, $hlColor-1_2);
+    @include svg--a(0.5rem 2rem, 4rem, $hlColor-1_1, $hlColor-1_2);
     @include drop--shadow;
     display: flex;
     justify-content: center;
@@ -138,7 +133,6 @@ header {
     background: rgba(0, 0, 0, 0.65);
     z-index: -1;
   }
-
 
   &::after {
     clip-path: polygon(0 100, 100% 0, 100% 100%, 0 100%);
