--- a/CSS/main/main.css
+++ b/CSS/main/main.css
@@ -190,11 +190,11 @@ header #header--title {
   margin: 0;
   padding: 1rem;
   margin-left: auto;
-  line-height: .9em;
+  line-height: 0.9em;
 }
 
 header .slogan {
-  margin-top: -.4em;
+  margin-top: -0.4em;
   padding-left: 3em;
   margin-left: auto;
   font-style: italic;
@@ -211,7 +211,7 @@ header #header--img {
 header #header--text {
   display: block;
   max-width: 480px;
-  padding: 2em 3em 2.4em;
+  padding: 2em 3em 2.8em;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 2em;
@@ -926,6 +926,10 @@ section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   gap: 2em;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
@@ -937,40 +941,44 @@ section {
   margin: 1em auto;
 }
 
-#about--section .agents img {
+#about--section .agents .agent {
+  width: 400px;
+}
+
+#about--section .agents .agent img {
   margin: 1.5em 0 0;
   background: white;
   border-radius: 15px;
 }
 
-#about--section .agents address {
+#about--section .agents .agent address {
   color: #f1ead4;
   line-height: 2rem;
   padding-bottom: 1.5em;
 }
 
-#about--section .agents address a:-webkit-any-link {
+#about--section .agents .agent address a:-webkit-any-link {
   position: relative;
   text-decoration: none;
   color: #c3a082;
   z-index: 1;
 }
 
-#about--section .agents address a:-moz-any-link {
+#about--section .agents .agent address a:-moz-any-link {
   position: relative;
   text-decoration: none;
   color: #c3a082;
   z-index: 1;
 }
 
-#about--section .agents address a:any-link {
+#about--section .agents .agent address a:any-link {
   position: relative;
   text-decoration: none;
   color: #c3a082;
   z-index: 1;
 }
 
-#about--section .agents address a:-webkit-any-link::after {
+#about--section .agents .agent address a:-webkit-any-link::after {
   content: "";
   position: absolute;
   background: currentColor;
@@ -988,7 +996,7 @@ section {
   transition: transform 250ms ease-in, -webkit-transform 250ms ease-in;
 }
 
-#about--section .agents address a:-moz-any-link::after {
+#about--section .agents .agent address a:-moz-any-link::after {
   content: "";
   position: absolute;
   background: currentColor;
@@ -1004,7 +1012,7 @@ section {
   transition: transform 250ms ease-in, -webkit-transform 250ms ease-in;
 }
 
-#about--section .agents address a:any-link::after {
+#about--section .agents .agent address a:any-link::after {
   content: "";
   position: absolute;
   background: currentColor;
@@ -1022,21 +1030,21 @@ section {
   transition: transform 250ms ease-in, -webkit-transform 250ms ease-in;
 }
 
-#about--section .agents address a:hover, #about--section .agents address a:active, #about--section .agents address a:focus {
+#about--section .agents .agent address a:hover, #about--section .agents .agent address a:active, #about--section .agents .agent address a:focus {
   outline: none;
   color: #eee6c6;
 }
 
-#about--section .agents address a:hover::after, #about--section .agents address a:active::after, #about--section .agents address a:focus::after {
+#about--section .agents .agent address a:hover::after, #about--section .agents .agent address a:active::after, #about--section .agents .agent address a:focus::after {
   -webkit-transform-origin: left;
           transform-origin: left;
 }
 
-#about--section .agents .bio--svg {
+#about--section .agents .agent .bio--svg {
   display: none;
 }
 
-#about--section .agents .bio {
+#about--section .agents .agent .bio {
   position: -webkit-sticky;
   position: sticky;
   -webkit-box-shadow: inset 0px 8px 10px 2px black;
@@ -1465,6 +1473,7 @@ footer h2 {
   font-weight: 1000;
   color: #2a283f;
   letter-spacing: -2px;
+  line-height: 0.8em;
 }
 
 footer h3 {
@@ -1573,7 +1582,7 @@ footer a:hover::after, footer a:active::after, footer a:focus::after {
           transform-origin: left;
 }
 
-footer .footer__grid {
+footer .footer__flex {
   color: #f1ead4;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1584,7 +1593,7 @@ footer .footer__grid {
           flex-direction: column;
 }
 
-footer .footer__grid #footer__addresses {
+footer .footer__flex .footer__addresses {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1598,7 +1607,7 @@ footer .footer__grid #footer__addresses {
   color: #f1ead4;
 }
 
-footer .footer__grid #footer__addresses .footer--card {
+footer .footer__flex .footer__addresses .footer--card {
   -webkit-box-shadow: inset 0px 6px 10px 0px black;
           box-shadow: inset 0px 6px 10px 0px black;
   -webkit-box-sizing: border-box;
@@ -1607,11 +1616,11 @@ footer .footer__grid #footer__addresses .footer--card {
   background: #2a283f linear-gradient(rgba(0, 0, 0, 0.1));
   padding: 1.8em;
   border-radius: 20px;
-  width: 450px;
+  width: 460px;
   margin: 2em auto;
 }
 
-footer .footer__grid .footer--gkg--sm {
+footer .footer__flex .footer--gkg--sm {
   list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1631,20 +1640,20 @@ footer .footer__grid .footer--gkg--sm {
   margin: 0em auto;
 }
 
-footer .footer__grid .footer--gkg--sm li {
+footer .footer__flex .footer--gkg--sm li {
   margin-bottom: 1em;
 }
 
-footer .footer__grid .footer--gkg--sm li span {
+footer .footer__flex .footer--gkg--sm li span {
   font-size: 1.6em;
   font-weight: bolder;
 }
 
-footer .footer__grid .footer--gkg--sm li svg {
+footer .footer__flex .footer--gkg--sm li svg {
   font-size: 1.2em;
 }
 
-footer .footer__grid .footer--gkg--sm li::after {
+footer .footer__flex .footer--gkg--sm li::after {
   content: "";
   position: absolute;
   background: rgba(0, 0, 0, 0.4);
@@ -1656,7 +1665,7 @@ footer .footer__grid .footer--gkg--sm li::after {
   bottom: -1rem;
 }
 
-footer .footer__grid p {
+footer .footer__flex p {
   padding: 1em 2.5em;
   line-height: 1.5em;
   margin: 4rem auto 1rem auto;
@@ -1664,7 +1673,7 @@ footer .footer__grid p {
   color: #2a283f;
 }
 
-footer .footer__grid address {
+footer .footer__flex address {
   font-size: 1.2em;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1683,7 +1692,7 @@ footer .footer__grid address {
   height: min-content;
 }
 
-footer .footer__grid address span {
+footer .footer__flex address span {
   font-size: 1.2em;
   padding-bottom: 0em;
   margin-bottom: 0.1em;
@@ -1691,33 +1700,33 @@ footer .footer__grid address span {
   font-weight: bolder;
 }
 
-footer .footer__grid address a {
+footer .footer__flex address a {
   padding-left: 0.2em;
   margin: 0;
 }
 
-footer .footer__grid address a:-webkit-any-link {
+footer .footer__flex address a:-webkit-any-link {
   position: relative;
   text-decoration: none;
   color: #c3a082;
   z-index: 1;
 }
 
-footer .footer__grid address a:-moz-any-link {
+footer .footer__flex address a:-moz-any-link {
   position: relative;
   text-decoration: none;
   color: #c3a082;
   z-index: 1;
 }
 
-footer .footer__grid address a:any-link {
+footer .footer__flex address a:any-link {
   position: relative;
   text-decoration: none;
   color: #c3a082;
   z-index: 1;
 }
 
-footer .footer__grid address a:-webkit-any-link::after {
+footer .footer__flex address a:-webkit-any-link::after {
   content: "";
   position: absolute;
   background: currentColor;
@@ -1735,7 +1744,7 @@ footer .footer__grid address a:-webkit-any-link::after {
   transition: transform 250ms ease-in, -webkit-transform 250ms ease-in;
 }
 
-footer .footer__grid address a:-moz-any-link::after {
+footer .footer__flex address a:-moz-any-link::after {
   content: "";
   position: absolute;
   background: currentColor;
@@ -1751,7 +1760,7 @@ footer .footer__grid address a:-moz-any-link::after {
   transition: transform 250ms ease-in, -webkit-transform 250ms ease-in;
 }
 
-footer .footer__grid address a:any-link::after {
+footer .footer__flex address a:any-link::after {
   content: "";
   position: absolute;
   background: currentColor;
@@ -1769,17 +1778,17 @@ footer .footer__grid address a:any-link::after {
   transition: transform 250ms ease-in, -webkit-transform 250ms ease-in;
 }
 
-footer .footer__grid address a:hover, footer .footer__grid address a:active, footer .footer__grid address a:focus {
+footer .footer__flex address a:hover, footer .footer__flex address a:active, footer .footer__flex address a:focus {
   outline: none;
   color: #eee6c6;
 }
 
-footer .footer__grid address a:hover::after, footer .footer__grid address a:active::after, footer .footer__grid address a:focus::after {
+footer .footer__flex address a:hover::after, footer .footer__flex address a:active::after, footer .footer__flex address a:focus::after {
   -webkit-transform-origin: left;
           transform-origin: left;
 }
 
-footer .footer__grid address ul {
+footer .footer__flex address ul {
   list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1793,21 +1802,21 @@ footer .footer__grid address ul {
   color: #f1ead4;
 }
 
-footer .footer__grid address ul li {
+footer .footer__flex address ul li {
   margin-bottom: 0.5em;
 }
 
-footer .footer__grid address ul li svg {
+footer .footer__flex address ul li svg {
   padding-left: 0.5em;
   font-size: 1.2em;
 }
 
-footer .footer__grid .footer__logos-rr-smls {
+footer .footer__flex .footer__logos-rr-smls {
   padding-bottom: 1rem;
   margin: 0 auto;
 }
 
-footer .footer__grid .footer__logos-rr-smls img {
+footer .footer__flex .footer__logos-rr-smls img {
   width: 10em;
   margin: 1em;
 }
@@ -1820,6 +1829,13 @@ img {
 .bs {
   -webkit-box-shadow: 0px 0px 4px 1px black;
           box-shadow: 0px 0px 4px 1px black;
+}
+
+.GKG--logo {
+  position: absolute;
+  top: 5em;
+  width: 16em;
+  right: 58em;
 }
 
 .header--buy {
@@ -1992,23 +2008,31 @@ img {
 }
 
 @media screen and (max-width: 666px) {
+  .GKG--logo {
+    width: 12em;
+    right: 5em;
+  }
   #upper--nav #upper--nav--phones {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    top: -2px;
   }
   #upper--nav em {
     margin: auto auto auto 0;
   }
   #top--nav {
-    top: 60px;
+    top: 65px;
   }
   #top--nav .ddm {
     display: none;
   }
   footer h2 {
     margin: -1em auto 0em;
+  }
+  footer h2 .footer__flex .footer__addresses .footer--card {
+    background: red;
   }
 }
 /*# sourceMappingURL=main.css.map */
