--- a/CSS/main/main.css
+++ b/CSS/main/main.css
@@ -952,6 +952,7 @@ section {
 
 #about--section .agents .agent {
   width: 400px;
+  margin: 0 auto;
 }
 
 #about--section .agents .agent img {
@@ -1072,9 +1073,6 @@ section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
