--- a/CSS/2-base/_content.scss
+++ b/CSS/2-base/_content.scss
@@ -57,7 +57,7 @@
 
     #welcome--img {
       display: block;
-      margin: 1em auto;
+      margin: 1em auto -0.5em;
     }
 
     p {
@@ -116,8 +116,9 @@
     position: relative;
     z-index: 1;
     margin: 1em auto;
+
     .agent {
-      width: 400px;
+      width: 380px;
       margin: 0 auto;
       img {
         margin: 1.5em 0 0;
@@ -128,7 +129,7 @@
       address {
         color: $colorText-1;
         line-height: 2rem;
-        padding-bottom: 1.5em;
+        padding-bottom: 1em;
 
         a {
           @include anchor();
@@ -143,7 +144,7 @@
         @include shadow--container();
         border-radius: 20px;
         width: 300px;
-        height: 400px;
+        height: 380px;
         font-style: italic;
         color: $colorText-2;
 
@@ -168,6 +169,7 @@
   box-sizing: border-box;
 
   .why--us {
+    margin-top: -4em;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -186,7 +188,7 @@
 
       .why--us--box--h3 {
         top: 0;
-        height: fit-content;
+        height: 380px;
         text-align: center;
         font-size: 3em;
         width: 320px;
