--- a/CSS/2-base/_footer.scss
+++ b/CSS/2-base/_footer.scss
@@ -17,7 +17,7 @@ footer {
 
   h3 {
     font-size: 2.8rem;
-    margin-bottom: -0.8em;
+    margin-bottom: -0.2em;
     padding-bottom: 0em;
     font-weight: 1000;
     margin-top: 0;
@@ -29,8 +29,8 @@ footer {
       height: 5px;
       position: absolute;
       bottom: -10px;
-      left: -10px;
-      right: -10px;
+      left: 0px;
+      right: 0px;
     }
   }
 
@@ -62,17 +62,16 @@ footer {
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      font-size: 1rem;
+      font-size: 0.88em;
       color: $colorText-1;
 
       .footer--card {
         @include card--shadow--small();
         box-sizing: border-box;
         background: $colorBg-1 linear-gradient(rgba(0, 0, 0, 0.1));
-        padding: 1.8em;
+        padding: 1.8em 1.2em;
         border-radius: 20px;
-        min-width: 440px;
-        max-width: 1fr;
+        width: 380px;
         margin: 2em auto;
       }
     }
@@ -92,6 +91,7 @@ footer {
 
       li {
         margin-bottom: 1em;
+        font-size: 1.5em;
 
         span {
           font-size: 1.6em;
