--- a/CSS/2-base/_header-fs.scss
+++ b/CSS/2-base/_header-fs.scss
@@ -65,6 +65,12 @@ header {
     margin-right: auto;
   }
 
+  .header--logo--alt {
+    position: relative;
+    top: 2em;
+    left: 4em;
+  }
+
   #header--text {
     display: block;
     max-width: 480px;
@@ -87,7 +93,7 @@ header {
     font-size: 2em;
     top: 20px;
     right: 0;
-    text-align: center;
+    height: 2em;
   }
 
   .header--down--arrow {
